force-app/main/default/objects/Reporting_2__c/Reporting_2__c.object-meta.xml
<CustomObject>
    <label>Reporting 2</label>
    <nameField>
        <displayFormat>RPT-{0000}</displayFormat>
        <label>Reporting 2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>