force-app/main/default/objects/Reporting_2__c/fields/Hot_Leads__c.field-meta.xml
<CustomField>
    <fullName>Hot_Leads__c</fullName>
    <label>Hot Leads</label>
    <length>30</length>
    <type>Text</type>
</CustomField>