force-app/main/default/objects/Reporting_2__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pipeline</label>
    <type>Checkbox</type>
</CustomField>